<package>
  <name>hpp_tutorial</name>
  <version>4.9.0</version>
  <description>
    Tutorial for Humanoid path planner platform
  </description>
  <author>Florent Lamiraux</author>
  <maintainer email="hpp@laas.fr">Florent Lamiraux</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-corbaserver</build_depend>
  <exec_depend>iai_maps</exec_depend>
</package>
