<?xml version='1.0'?>
<package format='2'>
  <name>hpp_tutorial</name>
  <version>4.12.0</version>
  <description>
    Tutorial for Humanoid path planner platform
  </description>
  <author>Florent Lamiraux</author>
  <maintainer email="hpp@laas.fr">Florent Lamiraux</maintainer>
  <license>LGPL v2</license>
  <build_depend>hpp-corbaserver</build_depend>
  <build_depend>hpp-manipulation-corba</build_depend>
</package>
